<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundShare</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search_rooms">Search Rooms</string>
    <string name="action_more_options">More Options</string>
    <string name="action_search_music">Search on YouTube</string>
    <string name="action_add_room">Create a room</string>
    <string name="action_refresh_room">Refresh</string>
    <string name="revoke_access">Revoke Google+ access</string>
    <string name="title_activity_target">TargetActivity</string>
    <string name="target_text">Target class</string>
    <string name="title_activity_main">SoundShare</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_room">SoundShare</string>
    <string name="passwordFieldLoginActivity">Password</string>
    <string name="loginWithGoogleButtonLoginActivity">Login with Google+</string>
    <string name="checkBoxLoginActivity">Remember me</string>
    <string name="settingsButtonMainActivity">Settings</string>
    <string name="joinRoomButtonMainActivity">Join a Room !</string>
    <string name="musicsButtonMainActivity">My Music</string>
    <string name="upvoteButtons">Dayum !</string>
    <string name="downvoteButtons">Meh.</string>
    <string name="grabButtons">Grab</string>
    <string name="title_activity_music">My Music</string>
    <string name="quitButtons">Quit</string>
    <string name="returnButtons">Return</string>
    <string name="usernameFieldLoginActivity">Username</string>
    <string name="title_activity_choose_room">Join a Room</string>
    <string name="title_activity_create_room">Create Your Room</string>
    <string name="title_activity_music_history">History</string>
    <string name="title_activity_search_music">Search a Music</string>
    <string name="title_activity_search_room">Search a Room</string>
    <string name="createRoomButtonChooseRoomActivity">Create your own room</string>
    <string name="searchRoomButtonChooseRoomActivity">Search</string>
    <string name="roomNameCreateRoomActivity">Room\'s name</string>
    <string name="confirmRoomNameButtonCreateRoomActivity">Create</string>
    <string name="searchButtonSearchRoomActivity">Search</string>
    <string name="searchButtonSearchMusicActivity">Search</string>
    <string name="searchRoomFieldSearchRoomActivity">Search for a room</string>
    <string name="searchMusicFieldSearchMusicActivity">Enter a song name</string>
    <string name="searchMusicButtonSearchMusicActivity">Youtube Search</string>
    <string name="searchButtonMusicActivity">Search on Youtube</string>
    <string name="historyButtons">History</string>
    <string name="hello_world">helloDaWorld</string>
    <string name="pauseButtons">Pause</string>
    <string name="refreshButtons">Refresh</string>
    <string name="spinnerGenreCreateRoomActivity_prompt">Select the genre</string>
    <string name="spinnerStatusCreateRoomActivity_prompt">Room\'s Genre</string>
    <string name="checkBoxPop">Pop</string>
    <string name="checkBoxRock">Rock</string>
    <string name="checkBoxClassical">Classical</string>
    <string name="checkBoxMetal">Metal</string>
    <string name="checkBoxHouse">House</string>
    <string name="checkBoxTranse">Transe</string>
    <string name="checkBoxTechno">Techno</string>
    <string name="checkBoxElectro">Electro</string>
    <string name="checkBoxFolk">Folk</string>
    <string name="checkBoxJazz">Jazz</string>
    <string name="checkBoxCountry">Country</string>
    <string name="checkBoxLatino">Latino</string>
    <string name="checkBoxOthers">Others</string>
    <string name="checkBoxAnything">Anything</string>
    <string name="checkBoxAll">All</string>
    <string name="closeButtonChooseRoomActivity">Close</string>
    <string name="closeButtonSearchRoomActivity">Close</string>
    <string name="optionsButtonChooseRoomActivity">More options</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="add_to_playlist">Add to my playlist</string>
    <string name="searchMusicFieldRoomActivity">Enter a song name</string>
    <string name="SearchOnYoutubeButtonRoomActivity">Search on Youtube</string>
    <string name="SeeMyMusicsRoomActivity">Search in My Music</string>
    <string name="NewYoutubeSearchButtonRoomActivity">New search</string>

    <string-array name="allGenres">
        <item>"Pop"</item>
        <item>"Rock"</item>
        <item>"Classical"</item>
        <item>"Metal"</item>
        <item>"House"</item>
        <item>"Transe"</item>
        <item>"Techno"</item>
        <item>"Electro"</item>
        <item>"Folk"</item>
        <item>"Jazz"</item>
        <item>"Country"</item>
        <item>"Latino"</item>
        <item>"Others</item>
        <item>"Anything"</item>
    </string-array>
    <string-array name="status">
        <item>"Public"</item>
        <item>"Private"</item>
    </string-array>
    <string-array name="sortTypes">
        <item>"#Users"</item>
        <item>"Alphabetically"</item>
    </string-array>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_search_music_test">SearchMusicTestActivity</string>
    <string name="title_activity_admin_room">SoundShare</string>
    <string name="skipButtonAdminRoomActivity">Next !</string>
    <string name="keepTrackToDateServicec">Just a service like any other</string>
    <string name="joinQueueButton">Add Track</string>
    <string name="your_track">Your Tracks :</string>
    <string name="delete_song">Delete</string>
    <string name="title_activity_dummy_admin_room">SoundShare</string>
    <string name="title_activity_play_your_track">SoundShare</string>
    <string name="title_activity_display_music">Select Your Track</string>
    <string name="backButtonRoomActivity">Back</string>
    <string name="title_activity_change_track_properties">SoundShare</string>
    <string name="displayPublicCheckbox">Public</string>
    <string name="displayPrivateCheckbox">Private</string>

</resources>