<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.epfl.sweng.djmusicapp.ChooseRoomActivity" >

    <item
        android:id="@+id/action_options_choose_room"
        android:icon="@drawable/volume_icon"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_more_options"/>
    <item
        android:id="@+id/action_search_choose_room"
        android:icon="@drawable/ic_search_white_36dp"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/action_search_rooms"/>
    <item
        android:id="@+id/action_refresh_choose_room"
        android:icon="@drawable/ic_refresh_white_36dp"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_add_choose_room"
        android:icon="@drawable/ic_add_white_36dp"
        android:orderInCategory="110"
        android:showAsAction="always"
        android:title="@string/action_add_room"/>

</menu>