<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutChangeTrackPropertiesActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.djmusicapp.activities.ChangeTrackPropertiesActivity" >
    
    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:text="@string/title"/>
        <EditText 
            android:id="@+id/edit_title1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10">
            
            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:text="@string/artist"/>
        <EditText 
            android:id="@+id/edit_artist1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
           android:layout_width="100dp"
           android:layout_height="match_parent"
           android:text="@string/album"/>
        <EditText 
            android:id="@+id/edit_album1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:ems="10"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
           android:layout_width="100dp"
           android:layout_height="match_parent"
           android:text="@string/genre"/>
        <Spinner
        android:id="@+id/spinnerGenreChangeTrackPropertiesActivity"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:entries="@array/allGenres"
        android:prompt="@string/spinnerGenreCreateRoomActivity_prompt" />
    </LinearLayout>
    <Button 
        android:id="@+id/AddModifiedMusic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:onClick="onClickAddModifiedTrack"
        android:text="@string/add_to_playlist" />


</LinearLayout>
