<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCreateRoomActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.djmusicapptristan.CreateRoomActivity" >

    <EditText
        android:id="@+id/roomNameCreateRoomActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/roomNameCreateRoomActivity"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinnerGenreCreateRoomActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:entries="@array/allGenres"
        android:prompt="@string/spinnerGenreCreateRoomActivity_prompt" />

    <Spinner
        android:id="@+id/spinnerStatusCreateRoomActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:entries="@array/status"
        android:prompt="@string/spinnerStatusCreateRoomActivity_prompt" />

    <LinearLayout
        android:id="@+id/linearLayout2CreateRoomActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3CreateRoomActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/confirmRoomNameButtonCreateRoomActivity"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="onClickCreateButtonFromCreateRoomActivity"
        android:text="@string/confirmRoomNameButtonCreateRoomActivity" />

</LinearLayout>